Refactoring: Extracted Helper class and derivates from Packaging. Adjusted classes that use Helper objects to reflect this change.
git-svn-id: svn+ssh://evolvis.org/scmrepos/svn/mvn-pkg-plugin/trunk@380 cdf71550-99e3-4430-8f9a-3e0db7cf372a